tests/NormalTests/paczka1/fuzzy1/82278457.err
Error in line 10: S114 A322 23,3
Error in line 16: 8WkLEPwlRk S114 78,5
Error in line 28: ipuVHuu A401 67,4
Error in line 22: sIFP32sEV95 A788 37,0
